--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1,24 +1,26 @@
 /*-----icons-----*/
 @font-face {
   font-family: 'icomoon';
-  src:url('fonts/icomoon.eot?-8e83qx');
-  src:url('fonts/icomoon.eot?#iefix-8e83qx') format('embedded-opentype'),
-    url('fonts/icomoon.woff?-8e83qx') format('woff'),
-    url('fonts/icomoon.ttf?-8e83qx') format('truetype'),
-    url('fonts/icomoon.svg?-8e83qx#icomoon') format('svg');
+  src:url('/assets/icomoon.eot');
+  src:url('/assets/icomoon.eot?#iefix') format('embedded-opentype'),
+    url('/assets/icomoon.woff') format('woff'),
+    url('/assets/icomoon.ttf') format('truetype'),
+    url('/assets/icomoon.svg#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-[class^="icon-"]:before,
-[class*=" icon-"]:before {
+[class^="icon-"], [class*=" icon-"] {
   font-family: 'icomoon';
-  font-style: normal;
   speak: none;
+  font-style: normal;
   font-weight: normal;
-  -webkit-font-smoothing: antialiased;
-          font-smoothing: antialiased;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
   text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .icon-plus{
